package com.insurance.policy.domain.port;

import com.insurance.policy.domain.entity.Claim;
import com.insurance.policy.domain.valueobject.ClaimNumber;
import com.insurance.policy.domain.valueobject.ClaimStatus;
import java.util.List;
import java.util.Optional;

/**
 * Repository interface for Claim.
 *
 * This is a port (interface) in the domain layer following Clean Architecture.
 * It defines what operations are needed without specifying implementation details.
 * The implementation will be in the infrastructure layer.
 *
 * @author Generated by BMAD Spring Boot Clean Architecture Generator
 * @version 1.0
 */
public interface ClaimRepository {

    /**
     * Save a Claim.
     *
     * @param claim the entity to save
     * @return the saved entity with generated ID if new
     */
    Claim save(Claim claim);

    /**
     * Find Claim by ID.
     *
     * @param id the entity ID
     * @return Optional containing the entity if found
     */
    Optional<Claim> findById(Long id);

    /**
     * Find all Claim entities.
     *
     * @return list of all entities
     */
    List<Claim> findAll();

    /**
     * Delete Claim by ID.
     *
     * @param id the entity ID to delete
     */
    void deleteById(Long id);

    /**
     * Check if Claim exists by ID.
     *
     * @param id the entity ID
     * @return true if exists, false otherwise
     */
    boolean existsById(Long id);

    /**
     * Find Claim by claim number.
     *
     * @param claimNumber the claim number
     * @return Optional containing the claim if found
     */
    Optional<Claim> findByClaimNumber(ClaimNumber claimNumber);

    /**
     * Find all claims by status.
     *
     * @param status the claim status
     * @return list of claims with the specified status
     */
    List<Claim> findByStatus(ClaimStatus status);

    /**
     * Find all claims for a specific policy.
     *
     * @param policyId the policy ID
     * @return list of claims for the policy
     */
    List<Claim> findByPolicyId(String policyId);
}
