package com.insurance.policy.domain.port;

import com.insurance.policy.domain.entity.Policy;
import com.insurance.policy.domain.valueobject.PolicyNumber;

import java.util.List;
import java.util.Optional;

/**
 * Policy Repository interface - Domain Port.
 *
 * Defines the contract for policy persistence operations.
 * Implementation is in the infrastructure layer (Hexagonal Architecture).
 *
 * @author Generated by BMAD Spring Boot Clean Architecture Generator
 */
public interface PolicyRepository {

    /**
     * Save a policy (create or update).
     *
     * @param policy the policy to save
     * @return the saved policy with generated ID
     */
    Policy save(Policy policy);

    /**
     * Find a policy by ID.
     *
     * @param id the policy ID
     * @return Optional containing the policy if found
     */
    Optional<Policy> findById(Long id);

    /**
     * Find a policy by policy number.
     *
     * @param policyNumber the policy number
     * @return Optional containing the policy if found
     */
    Optional<Policy> findByPolicyNumber(PolicyNumber policyNumber);

    /**
     * Find all policies for a customer.
     *
     * @param customerId the customer ID
     * @return list of policies
     */
    List<Policy> findByCustomerId(String customerId);

    /**
     * Find all policies.
     *
     * @return list of all policies
     */
    List<Policy> findAll();

    /**
     * Delete a policy by ID.
     *
     * @param id the policy ID
     */
    void deleteById(Long id);

    /**
     * Check if a policy exists by ID.
     *
     * @param id the policy ID
     * @return true if exists
     */
    boolean existsById(Long id);
}
