@startuml Insurance Policy Service - Component Diagram

!define ICONURL https://raw.githubusercontent.com/tupadr3/plantuml-icon-font-sprites/v2.4.0
!includeurl ICONURL/common.puml
!includeurl ICONURL/font-awesome-5/java.puml
!includeurl ICONURL/font-awesome-5/database.puml

title Insurance Policy Service - Component Diagram

skinparam componentStyle rectangle
skinparam backgroundColor #FEFEFE
skinparam component {
    BackgroundColor<<presentation>> #E3F2FD
    BackgroundColor<<application>> #FFF3E0
    BackgroundColor<<domain>> #E8F5E9
    BackgroundColor<<infrastructure>> #F3E5F5
    BorderColor #666666
    FontSize 12
}

package "Presentation Layer" <<presentation>> {
    [PolicyController] as PC
    [ClaimController] as CC
    [PaymentController] as PAC
    [GlobalExceptionHandler] as EH
}

package "Application Layer" <<application>> {
    [CreatePolicyService] as CPS
    [SubmitClaimService] as SCS
    [ProcessPaymentService] as PPS

    package "DTOs" {
        [CreatePolicyInput/Output] as CPIO
        [SubmitClaimInput/Output] as SCIO
        [ProcessPaymentInput/Output] as PPIO
    }
}

package "Domain Layer" <<domain>> {
    package "Entities" {
        [Policy] as POL
        [Claim] as CLM
        [Payment] as PAY
        [Customer] as CUST
    }

    package "Value Objects" {
        [PolicyNumber] as PN
        [ClaimNumber] as CN
        [Money] as MON
        [Coverage] as COV
    }

    package "Repository Ports" {
        interface "PolicyRepository" as PR
        interface "ClaimRepository" as CR
        interface "PaymentRepository" as PAR
        interface "CustomerRepository" as CUSTR
    }
}

package "Infrastructure Layer" <<infrastructure>> {
    package "Persistence Adapters" {
        [PolicyRepositoryAdapter] as PRA
        [ClaimRepositoryAdapter] as CRA
        [PaymentRepositoryAdapter] as PARA
        [CustomerRepositoryAdapter] as CURA
    }

    package "JPA Entities" {
        [PolicyJpaEntity] as PJE
        [ClaimJpaEntity] as CJE
        [PaymentJpaEntity] as PAJE
        [CustomerJpaEntity] as CUJE
    }

    package "Mappers" {
        [PolicyMapper] as PM
        [ClaimMapper] as CM
        [PaymentMapper] as PAM
        [CustomerMapper] as CUM
    }

    database "PostgreSQL" as DB {
    }
}

' Presentation to Application
PC --> CPS : uses
CC --> SCS : uses
PAC --> PPS : uses

' Application to Domain
CPS --> PR : uses
SCS --> CR : uses
SCS --> PR : uses
PPS --> PAR : uses
PPS --> CR : uses

CPS --> POL : creates
SCS --> CLM : creates
PPS --> PAY : creates

' Domain relationships
POL --> PN : contains
POL --> COV : contains
POL --> MON : contains
CLM --> CN : contains
PAY --> MON : contains

' Infrastructure implements Domain
PRA .up.|> PR : implements
CRA .up.|> CR : implements
PARA .up.|> PAR : implements
CURA .up.|> CUSTR : implements

' Infrastructure to Database
PRA --> PJE : uses
PRA --> PM : uses
CRA --> CJE : uses
CRA --> CM : uses
PARA --> PAJE : uses
PARA --> PAM : uses
CURA --> CUJE : uses
CURA --> CUM : uses

PJE --> DB : persists to
CJE --> DB : persists to
PAJE --> DB : persists to
CUJE --> DB : persists to

note right of POL
  Domain entities contain
  business logic and rules.
  No framework dependencies.
end note

note right of PR
  Repository interfaces
  define persistence
  contracts (ports).
end note

note right of PRA
  Adapters implement
  repository ports using
  JPA and mappers.
end note

legend right
  |= Color |= Layer |
  |<#E3F2FD>| Presentation Layer |
  |<#FFF3E0>| Application Layer |
  |<#E8F5E9>| Domain Layer |
  |<#F3E5F5>| Infrastructure Layer |
endlegend

@enduml
